--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <hr>
     <h1>Checagem de vibe</h1>
     <a>
-        "<em>Estou me sentindo super bem hoje! Mal posso esperar para chegar em casa e estudar minha matéria
-            preferida!</em>"
+        <em>&quot;Estou me sentindo super bem hoje! Mal posso esperar para chegar em casa e estudar minha matéria
+            preferida!&quot;</em>
     </a><br>
     <a><strong>Vibe check: nice :></strong></a>
     <hr>
