--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
     <hr>
     <h1>Checagem de vibe</h1>
     <a>
-        <em>&quot;Estou me sentindo super bem hoje! Mal posso esperar para chegar em casa e estudar minha matéria
-            preferida!&quot;</em>
+        <em>
+            &quot;Estou me sentindo super bem hoje! Mal posso esperar para chegar em casa e estudar minha matéria
+            preferida!&quot;
+        </em>
+
     </a><br>
+
     <a><strong>Vibe check: nice :></strong></a>
+
     <hr>
+    
     <h1>Mapa do site</h1>
     <ul>
         <li>
