--- a/Projeto-Site-Anna-Bella/index.html
+++ b/Projeto-Site-Anna-Bella/index.html
@@ -1,41 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <img src="../Projeto-Site-Anna-Bella/Arquivos/capa.png" alt="Anna Bella modelo, mulher bonita de olhos azuis" id="imgcapa">
+        <img src="../Projeto-Site-Anna-Bella/Arquivos/capa.png" alt="Anna Bella modelo, mulher bonita de olhos azuis"
+            id="imgcapa">
+
         <div id="navegador">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            &nbsp | &nbsp
-            <li><a href="bio.html">BIOGRAFIA</a></li>
-            &nbsp | &nbsp
-            <li><a href="cp.html">CAMPANHAS PUBLICITÁRIAS</a></li>
-            &nbsp | &nbsp
-            <li><a href="ct.html">CONTATO</a></li>
-        </ul>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                &nbsp | &nbsp
+                <li><a href="bio.html">BIOGRAFIA</a></li>
+                &nbsp | &nbsp
+                <li><a href="cp.html">CAMPANHAS PUBLICITÁRIAS</a></li>
+                &nbsp | &nbsp
+                <li><a href="ct.html">CONTATO</a></li>
+            </ul>
         </div>
     </header>
     <main>
         <h3 class="titulo">Sobre Anna Bella</h3>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nisl tortor, blandit in nulla in, pharetra cursus erat. Fusce at justo quis dui posuere porta. Fusce a nisl id ipsum rutrum feugiat a vel enim. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra nunc ut augue elementum sollicitudin. Integer ut metus a augue pretium posuere. Cras cursus nulla vitae nisi dictum, sed efficitur ipsum mattis. Morbi hendrerit ante et tellus venenatis, sit amet feugiat mauris rutrum. Maecenas eget orci enim. Quisque bibendum quis nisl nec consequat. Fusce ac ante tincidunt, consequat felis non, gravida enim. Morbi id nulla sed libero ullamcorper accumsan.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nisl tortor, blandit in nulla in, pharetra
+            cursus erat. Fusce at justo quis dui posuere porta. Fusce a nisl id ipsum rutrum feugiat a vel enim. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus pharetra
+            nunc ut augue elementum sollicitudin. Integer ut metus a augue pretium posuere. Cras cursus nulla vitae nisi
+            dictum, sed efficitur ipsum mattis. Morbi hendrerit ante et tellus venenatis, sit amet feugiat mauris
+            rutrum. Maecenas eget orci enim. Quisque bibendum quis nisl nec consequat. Fusce ac ante tincidunt,
+            consequat felis non, gravida enim. Morbi id nulla sed libero ullamcorper accumsan.
         </p>
         <p>
-            Cras volutpat, quam ac consectetur dictum, urna urna maximus nulla, in lacinia massa enim eu metus. Etiam tincidunt ullamcorper scelerisque. Vestibulum mattis ultricies accumsan. Etiam eget blandit lectus. Aenean efficitur dolor sed sem aliquet varius. Morbi mattis orci quis ante porta hendrerit. Sed tempor interdum lectus quis convallis. Nullam ut lacus a sem fermentum placerat. Praesent non lacus ipsum.
+            Cras volutpat, quam ac consectetur dictum, urna urna maximus nulla, in lacinia massa enim eu metus. Etiam
+            tincidunt ullamcorper scelerisque. Vestibulum mattis ultricies accumsan. Etiam eget blandit lectus. Aenean
+            efficitur dolor sed sem aliquet varius. Morbi mattis orci quis ante porta hendrerit. Sed tempor interdum
+            lectus quis convallis. Nullam ut lacus a sem fermentum placerat. Praesent non lacus ipsum.
         </p>
         <p>
-            Morbi eget nibh mi. Nulla arcu urna, vulputate in consequat nec, suscipit quis erat. Nulla cursus eget ex sit amet tincidunt. Nullam fringilla velit et neque maximus luctus. Vivamus quis nisi sit amet erat auctor tristique. Ut et dolor ut neque feugiat feugiat hendrerit a eros. Maecenas fermentum mauris vel augue bibendum, ac ornare diam cursus. Pellentesque cursus tincidunt felis finibus bibendum. Nullam ultricies metus a ipsum rhoncus tempus.
+            Morbi eget nibh mi. Nulla arcu urna, vulputate in consequat nec, suscipit quis erat. Nulla cursus eget ex
+            sit amet tincidunt. Nullam fringilla velit et neque maximus luctus. Vivamus quis nisi sit amet erat auctor
+            tristique. Ut et dolor ut neque feugiat feugiat hendrerit a eros. Maecenas fermentum mauris vel augue
+            bibendum, ac ornare diam cursus. Pellentesque cursus tincidunt felis finibus bibendum. Nullam ultricies
+            metus a ipsum rhoncus tempus.
         </p>
     </main>
     <footer>
         Todos os direitos reservados
     </footer>
 </body>
+
 </html>
