--- a/Projeto-Site-Anna-Bella/ct.html
+++ b/Projeto-Site-Anna-Bella/ct.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <img src="../Projeto-Site-Anna-Bella/Arquivos/capa.png" alt="Anna Bella modelo, mulher bonita de olhos azuis" id="imgcapa">
+        <img src="../Projeto-Site-Anna-Bella/Arquivos/capa.png" alt="Anna Bella modelo, mulher bonita de olhos azuis"
+            id="imgcapa">
         <div id="navegador">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            &nbsp | &nbsp
-            <li><a href="bio.html">BIOGRAFIA</a></li>
-            &nbsp | &nbsp
-            <li><a href="cp.html">CAMPANHAS PUBLICITÁRIAS</a></li>
-            &nbsp | &nbsp
-            <li><a href="ct.html">CONTATO</a></li>
-        </ul>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                &nbsp | &nbsp
+                <li><a href="bio.html">BIOGRAFIA</a></li>
+                &nbsp | &nbsp
+                <li><a href="cp.html">CAMPANHAS PUBLICITÁRIAS</a></li>
+                &nbsp | &nbsp
+                <li><a href="ct.html">CONTATO</a></li>
+            </ul>
         </div>
     </header>
     <main>
         <h3 class="titulo">Contato</h3>
 
         <p>
-            Cras volutpat, quam ac consectetur dictum, urna urna maximus nulla, in lacinia massa enim eu metus. Etiam tincidunt ullamcorper scelerisque. Vestibulum mattis ultricies accumsan. Etiam eget blandit lectus. Aenean efficitur dolor sed sem aliquet varius. Morbi mattis orci quis ante porta hendrerit. Sed tempor interdum lectus quis convallis. Nullam ut lacus a sem fermentum placerat. Praesent non lacus ipsum.
-            Donec a augue luctus, euismod tellus non, consequat nunc. Etiam porttitor malesuada maximus. Curabitur a tellus non purus dictum sodales.
+            Cras volutpat, quam ac consectetur dictum, urna urna maximus nulla, in lacinia massa enim eu metus. Etiam
+            tincidunt ullamcorper scelerisque. Vestibulum mattis ultricies accumsan. Etiam eget blandit lectus. Aenean
+            efficitur dolor sed sem aliquet varius. Morbi mattis orci quis ante porta hendrerit. Sed tempor interdum
+            lectus quis convallis. Nullam ut lacus a sem fermentum placerat. Praesent non lacus ipsum.
+            Donec a augue luctus, euismod tellus non, consequat nunc. Etiam porttitor malesuada maximus. Curabitur a
+            tellus non purus dictum sodales.
         </p>
-        
-        <img src="../Projeto-Site-Anna-Bella/Arquivos/foto1.png" alt="Mulher loira em preto e branco olhando para um cenário" class="imgCp">
- <br>
+
+        <img src="../Projeto-Site-Anna-Bella/Arquivos/foto1.png"
+            alt="Mulher loira em preto e branco olhando para um cenário" class="imgCp">
+        <br>
         <span>
             <strong>Email: </strong>contato@annabella.com <br>
             <strong>Telefone: </strong>(00) 99999-9999
@@ -43,4 +51,5 @@
     </footer>
 
 </body>
+
 </html>
