--- a/Projeto-Site-TecBlog/HTML/cel.html
+++ b/Projeto-Site-TecBlog/HTML/cel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TecBlog - O seu blog de tecnologia</title>
+    <title>Celulares - TecBlog</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 
@@ -15,9 +15,9 @@
             <h1>Tec<span class="branco">Blog</span></h1>
         </div>
         <div id="menu">
-            <div id="home">
-                <a href="index.html" class="itemmenu">Home</a>
-                <a href="cel.html">Celulares</a>
+            <div id="cel">
+                <a href="index.html">Home</a>
+                <a href="cel.html" class="itemmenu">Celulares</a>
                 <a href="jog.html">Jogos</a>
                 <a href="info.html">Informática</a>
                 <a href="Elet.html">Eletrônicos</a>
@@ -31,7 +31,7 @@
             <div class="postagem">
                 <h2>Postagem 1</h2>
                 <span class="data-post">Enviado dia 21 de fevereiro de 2024</span>
-                <img width="620" src="../Res/imagem1.jpg" alt="Laptop e xicara com café lado a lado em uma mesa de madeira escura">
+                <img width="620" src="../Res/imagem3.jpg" alt="Laptop e xicara com café lado a lado em uma mesa de madeira escura">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem sem. In a dui ex. Fusce vel
                     tellus in ex vehicula sodales at at arcu. Sed turpis nisl, dictum ac dui a, tempor gravida diam.
@@ -46,7 +46,7 @@
             <div class="postagem">
                 <h2>Postagem 2</h2>
                 <span class="data-post">Enviado dia 27 de janeiro de 2024</span>
-                <img width="620" src="../Res/imagem2.jpg" alt="Laptop e xicara com café lado a lado em uma mesa de madeira escura">
+                <img width="620" src="../Res/imagem5.jpg" alt="Laptop e xicara com café lado a lado em uma mesa de madeira escura">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem sem. In a dui ex. Fusce vel
                     tellus in ex vehicula sodales at at arcu. Sed turpis nisl, dictum ac dui a, tempor gravida diam.
