--- a/Projeto-Notícias-Cidade/brasil.html
+++ b/Projeto-Notícias-Cidade/brasil.html
@@ -8,16 +8,16 @@
         <title>Notícias Cidade - O seu portal de notícias favorito</title>
     </head>
 
-    <body>
+    <body id="duas-colunas">
         <div id="container">
 
             <div id="topo">
                 <img src="../Projeto-Notícias-Cidade/Res/Img/imagens/logo.png" alt="Notícias Cidade">
                 <ul id="listaNaveg">
-                    <li id="atual" class="primeiro">
+                    <li class="primeiro">
                         <a href="Index.html">Home</a>
                     </li>
-                    <li>
+                    <li id="atual">
                         <a href="brasil.html">Brasil</a>
                     </li>
                     <li>
@@ -82,54 +82,6 @@
                                             <img src="Res/Img/imagens/taxi.jpg" alt="" width="80">
                                             <h3>Árabes recusam petróleo</h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                    </div>
-                </div>
-
-                <div id="secundario">
-                    <div class="caixa entrevista">
-                        <h2>Última entrevista</h2>
-                            <div class="conteudoCaixa">
-                                <h3>entrevista com felipe silva</h3>
-                                <img src="Res/Img/imagens/doutor.jpg" alt="" width="100%" class="imgPrincipal">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                <a href="">Leia mais!</a>
-                            </div>
-                    </div>
-
-                    <div class="caixa">
-                        <h2>Notícias recentes</h2>
-                            <div class="conteudoCaixa">
-                                <ul id="listaNoticias">
-                                    <li>
-                                        <a href="">
-                                            <img src="Res/Img/imagens/mundo.jpg" alt="" width="80">
-                                            <h3>Europa em colapso</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pretium urna...</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="">
-                                            <img src="Res/Img/imagens/taxi.jpg" alt="" width="80">
-                                            <h3>Árabes recusam petróleo</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="">
-                                            <img src="Res/Img/imagens/tecnologia.jpg" alt="" width="80">
-                                            <h3>EUA em guerra</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pretium urna...</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="">
-                                            <img src="Res/Img/imagens/doutor.jpg" alt="" width="80">
-                                            <h3>Brasileiro reconhecido</h3>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
                                         </a>
                                     </li>
                                 </ul>
