--- a/RecursosHTML&CSS/CSS/Flexbox/Flexbox.html
+++ b/RecursosHTML&CSS/CSS/Flexbox/Flexbox.html
@@ -17,10 +17,10 @@
             </div>
             <br>
             <div id="itens2">
-                <div class="item">01</div>
-                <div class="item">02</div>
-                <div class="item">03</div>
-                <div class="item">04</div>
+                <div class="item grow1">01</div>
+                <div class="item grow2">02</div>
+                <div class="item shrink1">03</div>
+                <div class="item shrink2 basis">04</div>
                 <div class="item">05</div>
             </div>
         </div>
