--- a/JavaScript/HTML/operadores_aritmeticos.html
+++ b/JavaScript/HTML/operadores_aritmeticos.html
@@ -16,6 +16,26 @@
         document.write(num1 + '<br />')
         document.write('O decremento de ' + num1 + ' é: ' + (--num1) + '<br />')
         document.write(num1)
+
+        var teste = 10;
+
+        /*
+        teste = teste + 2 (-, *, /, %)
+        POR
+        teste += 2
+        teste -= 2
+        teste *= 2
+        teste /= 2
+        teste %= 2
+
+        Também funciona com strings e concatenação
+        ex.: 
+        var teste = "Olá "
+
+        teste += "mundo!"
+
+        console.log(teste);
+        */
     </script>
 </head>
 <body>
