--- a/JavaScript/Atividades/ObtendoInputComType.html
+++ b/JavaScript/Atividades/ObtendoInputComType.html
@@ -40,10 +40,10 @@
                 case '7':
                 case '8':
                 case '9':
-                    elementoN.value = caracteres;
+                    elementoN.value += caracteres;
                     break;
                 default:
-                    elementoL.value = caracteres
+                    elementoL.value += caracteres
 
             }
 
