--- a/JavaScript/Apps/Game mata mosquito/index.html
+++ b/JavaScript/Apps/Game mata mosquito/index.html
@@ -6,7 +6,7 @@
         <title>Mata mosquito</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        
+
         <link rel="stylesheet" href="style.css">
 
         <script src="jogo.js"></script>
@@ -18,7 +18,26 @@
                     <img src="imagens/game.png" alt="">
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col d-flex justify-content-center mb-3">
+                    <select name="niveis" id="nivel">
+                        <option class="text-center"> -- Selecionar a dificuldade -- </option>
+                        <option value="facil" class="text-center">Fácil</option>
+                        <option value="normal" class="text-center">Normal</option>
+                        <option value="difícil" class="text-center">Difícil</option>
+                        <option value="infernal" class="text-center">Infernal</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col d-flex justify-content-center">
+                    <button class="btn btn-success btn-lg" onclick="">Iniciar jogo</button>
+            +    </div>
+            </div>
         </div>
+       
         <script>
 
         </script>
