--- a/JavaScript/Apps/Game mata mosquito/index.html
+++ b/JavaScript/Apps/Game mata mosquito/index.html
@@ -9,7 +9,13 @@
 
         <link rel="stylesheet" href="style.css">
 
-        <script src="jogo.js"></script>
+        <script>
+            function iniciarJogo(){
+                var nivel = document.getElementById('nivel').value;
+
+                location.href = `app.html?${nivel}`
+            }
+        </script>
     </head>
     <body>
         <div class="container">
@@ -22,10 +28,9 @@
             <div class="row">
                 <div class="col d-flex justify-content-center mb-3">
                     <select name="niveis" id="nivel">
-                        <option class="text-center"> -- Selecionar a dificuldade -- </option>
                         <option value="facil" class="text-center">Fácil</option>
                         <option value="normal" class="text-center">Normal</option>
-                        <option value="difícil" class="text-center">Difícil</option>
+                        <option value="dificil" class="text-center">Difícil</option>
                         <option value="infernal" class="text-center">Infernal</option>
                     </select>
                 </div>
@@ -33,13 +38,9 @@
 
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-success btn-lg" onclick="">Iniciar jogo</button>
-            +    </div>
+                    <button class="btn btn-success btn-lg" onclick="iniciarJogo()">Iniciar jogo</button>
+                </div>
             </div>
         </div>
-       
-        <script>
-
-        </script>
     </body>
 </html>
