--- a/JavaScript/Apps/Game mata mosquito/vitoria.html
+++ b/JavaScript/Apps/Game mata mosquito/vitoria.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mata mosquito</title>
+        <title>Mata mosquito - Vitória!</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -14,34 +14,20 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col d-flex justify-content-center">
-                    <img src="imagens/game.png" alt="">
+                <div class="col">
+                    <div class="d-flex justify-content-center">
+                        <img src="imagens/vitoria.png" alt="Você ganhou!">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
+
             <div class="row">
-                <div class="col d-flex justify-content-center">
-                    <select name="niveis" id="nivel">
-                        <option value="facil">Fácil</option>
-                        <option value="normal">Normal</option>
-                        <option value="difícil">Difícil</option>
-                        <option value="infernal">Infernal</option>
-                    </select>
+                <div class="col">
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-light btn-lg" onclick="window.location.href = 'index.html'">Recomeçar</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col d-flex justify-content-center">
-                    <button class="btn btn-success btn-lg" onclick="">Iniciar jogo</button>
-                </div>
-            </div>
-        </div>
-
-
-        <script>
-
-        </script>
     </body>
 </html>
