--- a/Projeto-OrçamentoPessoal/index.html
+++ b/Projeto-OrçamentoPessoal/index.html
@@ -111,37 +111,17 @@
     </div>
 
     <!-- Modal -->
-    <!-- <div class="modal fade" id="modalIncompletos" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header text-danger d-flex align-items-center justify-content-between">
-            <h2 class="modal-title fs-5" id="exampleModalLabel">Erro no registro!</h2>
-            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Preencha todos os campos antes de registrar a despesa!
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Voltar</button>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- Modal -->
     <div class="modal fade" id="modalRegistro" tabindex="-1" aria-labelledby="modalH" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header d-flex align-items-center justify-content-between" id="modal-header">
-            <h2 class="modal-title fs-5" id="modalH"></h2>
+            <h1 class="modal-title fs-5" id="modalH"></h1>
             <button type="button" class="btn close" data-bs-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body" id="modal-body"></div>
-          <div class="modal-footer">
+          <div class="modal-footer" style="padding: .5rem;">
             <button type="button" class="btn" data-bs-dismiss="modal"  id="btn-modal">Voltar</button>
           </div>
         </div>
