--- a/Projeto-OrçamentoPessoal/consulta.html
+++ b/Projeto-OrçamentoPessoal/consulta.html
@@ -18,8 +18,7 @@
 
 	</head>
 
-  <body>
-
+  <body onload="new Despesa().carregarListaDespesas()">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
       <div class="container">
@@ -62,15 +61,15 @@
         <div class="col-md-2">
           <select class="form-control" id="mes">
             <option value="">Mês</option>
-            <option value="1">Janeiro</option>
-            <option value="2">Fevereiro</option>
-            <option value="3">Março</option>
-            <option value="4">Abril</option>
-            <option value="5">Maio</option>
-            <option value="6">Junho</option>
-            <option value="7">Julho</option>
-            <option value="8">Agosto</option>
-            <option value="9">Setembro</option>
+            <option value="01">Janeiro</option>
+            <option value="02">Fevereiro</option>
+            <option value="03">Março</option>
+            <option value="04">Abril</option>
+            <option value="05">Maio</option>
+            <option value="06">Junho</option>
+            <option value="07">Julho</option>
+            <option value="08">Agosto</option>
+            <option value="09">Setembro</option>
             <option value="10">Outubro</option>
             <option value="11">Novembro</option>
             <option value="12">Dezembro</option>
@@ -83,12 +82,12 @@
 
         <div class="col-md-6">
           <select class="form-control" id="tipo">
-            <option>Tipo</option>
-            <option value="1">Alimentação</option>
-            <option value="2">Educação</option>
-            <option value="3">Lazer</option>
-            <option value="4">Saúde</option>
-            <option value="5">Transporte</option>
+            <option value="">Tipo</option>
+            <option>Alimentação</option>
+            <option>Educação</option>
+            <option>Lazer</option>
+            <option>Saúde</option>
+            <option>Transporte</option>
           </select>
         </div>
       </div>
@@ -103,7 +102,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary" onclick="new Despesa().filtrarDespesas()">
             <i class="fas fa-search"></i>
           </button>
         </div>
@@ -111,7 +110,7 @@
 
       <div class="row">
         <div class="col">
-          <table class="table" >
+          <table class="table">
             <thead>
               <tr>
                 <th>Data</th>
@@ -122,7 +121,7 @@
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="lista-despesas">
             </tbody>
           </table>
         </div>
