--- a/Projeto-OrçamentoPessoal/index.html
+++ b/Projeto-OrçamentoPessoal/index.html
@@ -62,15 +62,15 @@
         <div class="col-md-2">
           <select class="form-control" id="mes">
             <option value="">Mês</option>
-            <option value="1">Janeiro</option>
-            <option value="2">Fevereiro</option>
-            <option value="3">Março</option>
-            <option value="4">Abril</option>
-            <option value="5">Maio</option>
-            <option value="6">Junho</option>
-            <option value="7">Julho</option>
-            <option value="8">Agosto</option>
-            <option value="9">Setembro</option>
+            <option value="01">Janeiro</option>
+            <option value="02">Fevereiro</option>
+            <option value="03">Março</option>
+            <option value="04">Abril</option>
+            <option value="05">Maio</option>
+            <option value="06">Junho</option>
+            <option value="07">Julho</option>
+            <option value="08">Agosto</option>
+            <option value="09">Setembro</option>
             <option value="10">Outubro</option>
             <option value="11">Novembro</option>
             <option value="12">Dezembro</option>
@@ -84,11 +84,11 @@
         <div class="col-md-6">
           <select class="form-control" id="tipo">
             <option value="">Tipo</option>
-            <option value="1">Alimentação</option>
-            <option value="2">Educação</option>
-            <option value="3">Lazer</option>
-            <option value="4">Saúde</option>
-            <option value="5">Transporte</option>
+            <option>Alimentação</option>
+            <option>Educação</option>
+            <option>Lazer</option>
+            <option>Saúde</option>
+            <option>Transporte</option>
           </select>
         </div>
       </div>
